src/objects/TRAK_Tester__c.object
<CustomObject>
    <description>Business Description: This object is used by a Test Manager or Test Script Writer to assign a Test Template to a user to start testing. When a Test Manager assigns a Test Template to a user with this object this system automatically copies the Test Template and associated Test Template Steps to a Test and Test Steps.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint Test</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Test</fullName>
                </value>
                <value>
                    <fullName>Stability Test</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>Performance Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Template</label>
        <referenceTo>TRAK_Test_Templates__c</referenceTo>
        <relationshipLabel>Testers</relationshipLabel>
        <relationshipName>TRAK_Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tester</label>
    <nameField>
        <displayFormat>TU-{00000}</displayFormat>
        <label>Tester Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PreventFromCreatingTesterUntilApproved</fullName>
        <active>true</active>
        <description>TRAK - This validation rule will prevent the user from creating a tester record if the Test Script is not in &quot;Approved&quot; status</description>
        <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Test_Template__r.Approval_Status__c,&apos;Approved&apos;))
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>You cannot create a Tester record until the related Test Script is in an &quot;Approved&quot; status</errorMessage>
    </validationRules>
</CustomObject>